<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="72dp"
                    android:layout_height="74dp"
                    app:srcCompat="@drawable/user"
                    tools:layout_editor_absoluteX="298dp"
                    tools:layout_editor_absoluteY="64dp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar2"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/orange"
                    app:navigationIcon="@drawable/icon45"
                    app:title="@string/page_title"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="23dp"
                    android:text="@string/ordena_y_come_lo_que_desees"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="88dp"
                    android:text="@string/hola_usuario"
                    android:textColor="#dd3d00"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="339dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:background="@drawable/search_background"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:ems="10"
                    android:hint="@string/busca_lo_que_quieres"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.437"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="341dp"
                    android:layout_height="127dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/orange_banner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="157dp"
                        android:layout_height="116dp"
                        android:contentDescription="@string/todo_02"
                        app:srcCompat="@drawable/image_banner"
                        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="3dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="116dp"
                        android:layout_height="123dp"
                        android:text="@string/ordena_ahora_es_momento_de_comer"
                        android:textColor="#0E0E0E"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="182dp"
                        tools:layout_editor_absoluteY="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/categorias"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                tools:textColor="#000000" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="237dp" />

        </LinearLayout>
    </ScrollView>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@id/scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#f6f6f6"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="6dp"
            android:layout_gravity="bottom">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/homeBtn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical"
                    android:text="Home"
                    android:textAlignment="center"
                    android:textColor="#676767"
                    android:textSize="12sp"
                    app:layout_anchor="@+id/app_bar"
                    app:layout_anchorGravity="center">

                    <ImageView
                        android:id="@+id/imageView72"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/inicio" />

                    <TextView
                        android:id="@+id/textView82"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/homeBtn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical"
                    android:text="Home"
                    android:textAlignment="center"
                    android:textColor="#676767"
                    android:textSize="12sp"
                    app:layout_anchor="@+id/app_bar"
                    app:layout_anchorGravity="center">

                    <ImageView
                        android:id="@+id/imageView73"
                        android:layout_width="73dp"
                        android:layout_height="34dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/menu" />

                    <TextView
                        android:id="@+id/textView83"
                        android:layout_width="63dp"
                        android:layout_height="wrap_content"
                        android:text="Menu"
                        android:textAlignment="4"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/homeBtn3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical"
                    android:text="Home"
                    android:textAlignment="center"
                    android:textColor="#676767"
                    android:textSize="12sp"
                    app:layout_anchor="@+id/app_bar"
                    app:layout_anchorGravity="center">

                    <ImageView
                        android:id="@+id/imageView74"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ajustes" />

                    <TextView
                        android:id="@+id/textView84"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ajustes"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                android:id="@+id/homeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical"
                android:text="Salir"
                android:textColor="#676767"
                android:textSize="12sp"
                android:textAlignment="center"
                app:layout_anchor="@+id/app_bar"
                app:layout_anchorGravity="center">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/cerrarsesion" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Salir
"
                    android:textColor="#676767"
                    android:textSize="12sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff5e00"
            android:contentDescription="@string/todo"
            android:elevation="3dp"
            app:backgroundTint="#ff5e00"
            app:layout_anchor="@+id/app_bar"
            app:layout_anchorGravity="center"
            tools:ignore="DuplicateSpeakableTextCheck">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="45dp"
            app:layout_anchor="@+id/floatingActionButton2"
            app:layout_anchorGravity="center" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>




</androidx.constraintlayout.widget.ConstraintLayout>